--- a/frontend/header.css
+++ b/frontend/header.css
@@ -31,3 +31,25 @@
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  height: 100px;
+  gap: 60px;
+}
+
+li {
+  list-style-type: none;
+  color: white;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-family: poppins;
+  font-weight: 300;
+  font-size: medium;
+}
