--- a/frontend/hero.css
+++ b/frontend/hero.css
@@ -1,6 +1,6 @@
 .hero {
     width: 100vw;
-    height: 500px;
+    height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,4 +8,5 @@
 
 .logoHero {
     height: 250px;
+    margin-top: -100px;
 }
