--- a/frontend/index.css
+++ b/frontend/index.css
@@ -3,7 +3,8 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  background: linear-gradient(to bottom, #111111, rgb(23, 23, 23));
+  background-color: #1d1d1d;
+  /*background: linear-gradient(to bottom, #111111, rgb(23, 23, 23));*/
 }
 
 .radial-bg {
@@ -14,6 +15,19 @@ body {
   height: 100vh;
   z-index: -1;
   pointer-events: none;
-  background: radial-gradient(circle, #383838 0%, transparent 70%);
+  background: radial-gradient(circle, #313131 0%, transparent 60%);
   filter: blur(1000%);
+}
+
+h1 {
+  margin: 0;
+  font-family: poppins;
+  font-weight: 500;
+}
+
+h2 {
+  margin: 0;
+  font-family: 'poppins regular', sans-serif;
+  font-weight: 200;
+  font-size: larger;
 }
