--- a/frontend/index.css
+++ b/frontend/index.css
@@ -15,8 +15,7 @@ body {
   height: 100vh;
   z-index: -1;
   pointer-events: none;
-  background: radial-gradient(circle, #313131 0%, transparent 60%);
-  filter: blur(1000%);
+  background: radial-gradient(circle, #313131 0%, #2a2a2a 40%, #1a1a1a 70%, transparent 100%);
 }
 
 h1 {
