--- a/frontend/info.css
+++ b/frontend/info.css
@@ -1,8 +1,8 @@
 .info {
     width: 100%;
-    height: 600px;
+    height: 800px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
 }
 
@@ -25,18 +25,46 @@
     height: 220px;
     width: 200px;
     background-color: #333333;
-    border-radius: 20px;
+    border-radius: 35px;
     margin-top: 100px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    align-items: center;
 }
 
 .tras {
     margin-top: 150px;
 }
 
-.imgLampada {
-    scale: 0.3;
+.pcard {
+    color: white;
+    text-align: center;
+    font-family: 'poppins ExtraLight';
+    font-size: smaller;
+    width: 80%;
+    margin-top: 30px;
+}
+
+.pcard2 {
+    color: white;
+    text-align: center;
+    font-family: 'poppins ExtraLight';
+    font-size: smaller;
+    width: 85%;
+    margin-top: 20px;
+}
+
+.pcard3 {
+    color: white;
+    text-align: center;
+    font-family: 'poppins ExtraLight';
+    font-size: smaller;
+    width: 90%;
+    margin-top: 20px;
+}
+
+img {
+    height: 70px;
+    margin-top: 30px;
 }
