--- a/frontend/header.css
+++ b/frontend/header.css
@@ -3,7 +3,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  z-index: 4;
 }
+
 .ajusteheader {
   height: 100px;
   width: 90%;
@@ -11,21 +14,28 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .logo {
   height: 30px;
+  margin: 0;
 }
+
 .btnlog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: transparent;
-  border: solid 2px white;
+  border: solid 1px white;
   border-radius: 20px;
   color: white;
-  padding-top: 5px;
   padding-bottom: 5px;
+  padding-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 .btnlog:hover {
   background-color: rgba(255, 255, 255, 0.192);
   color: rgb(255, 255, 255);
@@ -45,9 +55,9 @@
 
 li {
   list-style-type: none;
-  color: white;
 }
-a {
+
+.btnheader {
   text-decoration: none;
   color: white;
   font-family: poppins;
@@ -55,7 +65,13 @@ a {
   font-size: medium;
 }
 
-a:hover {
+.btnheader:hover {
   color: rgb(167, 167, 167);
   transition: 0.4s;
+  cursor: pointer;
+}
+
+img {
+    height: 70px;
+    margin-top: 30px;
 }
